# TARS

./: .env  .gitignore  Cargo.toml  LICENSE  LICENSE.txt  README.md  bacon.toml  dev.db  justfile  main.typ  notes.typ
common/: Cargo.toml
common/migrations/: 20250402210347_nanoids.sql
common/src/: config.rs  db.rs  dirs.rs  errors.rs  lib.rs  logging.rs  orm.rs  provider.rs
providers/recurring/: Cargo.toml
tars-cli/: Cargo.toml  tars.json
tars-cli/src/: args.rs  entry.rs  export.rs  handlers.rs  lib.rs  main.rs  serializer.rs
tars-daemon/: Cargo.toml
tars-daemon/.sqlx/: query-06fc6d5721c8bbf80c50854ef89b78ecf4fb00282dadd47015718051e8d7eaaf.json  query-07e57b06bc2eaa70d2b7fc0f311ba8aa1db40d9816b52ec99c0e36b64c022d95.json  query-0bf2e596fdef3f15ce0f5b1cf523b70cf530528894f9c162ce8bdf38ed76e4e3.json  query-0f1b0101df6436eb56d6166b1af3acdb2835b89d44a625444abf36d46f4c5bea.json  query-0fae67944ed261eaa7c112f6a2537ea638db18851ce2cd32d2f99cad2549f5bb.json  query-15cd981b77b6fd6bd12d481d7fde02dfa5aaa4a09370c7d5564e5bd5c066b26c.json  query-184f9901ca20ba6f69e2f5097925c60efb29d06063744ca81d5d36013840ba1c.json  query-1907974a09d92a7385e0c5e3268321adf839bc7aad057d31cea3fb78de539adf.json  query-1937ba32caeb477dd56fc4dbcc9c32ca5f14229eba86f9c4b52c2e240697bee1.json  query-21951228d3dea955bd1e22f27e54130fff1758b738d4598b740fbaa5e30a94de.json  query-24b96d926141869365e77a4700d6ec58ac8535f821aca15f693886c9ed8035bd.json  query-252c2974862ffa0b1e7effe6c3fdf0b48019a839deb712973bb9e7a888d92e7f.json  query-2549e6631799686702f6fc0ffee18449f21955e4712a71b7df1460b33b278ea1.json  query-2d7716bc709c8e2eb2e4e6c5ad13bc9942f8ac4011918dcc31582e4003ff80aa.json  query-328a7e66d635ad5314dc3fabe9fc84be1786f335366b79134435b09cd9db3a13.json  query-394b83545b7e23693426fbcb2bfa2caf2bb259c89e5f8bc7cecd3fcb36162510.json  query-402f91808e58a6e90e283cd789f729239e5b61e1807f129c7fab8bb60bdedecc.json  query-417a5979fdc021b11e9acaa73f88a14e7f640bc142ee378d05973a4d8f8eed4e.json  query-45aef6bae1b7bc3349ade5691560b3bf36c0403ca3f15d90cc65b2bf5d10f376.json  query-473484feed30fc76571be7e9b1a7b88fab96583fd3632442b8bea5ec5866da74.json  query-4e82d30a80fe16804ba897f4db2fad19e7d6a72c408aafab560ff88ebb49626b.json  query-543ec9c646c8274b0999393590d37943261989a656b463f50b893f7217ad0780.json  query-562722b8fb2f7e62ebd41ed74d12b3aeb9755499a064640c74be907eb8f24723.json  query-5c8f9d022841cc3432140e7d11a216368f23519b71475ae84a1a84b95128500a.json  query-605c4aff7fd64e3394ca59f463fccb76b85d9aa8813bf4c46ac141b050b4daea.json  query-6244e872f3757ca29f1809acf212154b0a4a0b77966fbba3b61adc96f34627e2.json  query-6574044277f885ed05a4318fc2e50f15bca9da1c38e4ce50212b6109acab3123.json  query-66a2fea993e9e40165a484e7127805129eb00c9e391361d0ba727bf81f691db9.json  query-68097a5aaa75d59c184740a400a0ac46b8490a5758499ddf45e0400ee9c5cd69.json  query-6cbbab07b0acded8f9f91b6830be1dc25f1a53423d117e930e6cd1a97d563214.json  query-7139049f3578e902e89a4f9ffbfc7e49cef489c1bfce21b83cca9ab64df60411.json  query-72b082bb111c47e398c43f049c193dc5de9b0d6a2730f12cb48415f5bd2c65ea.json  query-760c8019459eaa8e7f1554f4b96ebda554f5fc57fae51d1abc62b095dd255b29.json  query-7de7fb63e172138f262e3c7c753029da35e969650793d52fa1c99dbae41228fc.json  query-7f304f96e5afcb7cb05b5d08342ff70c54bf8712e6f69749dd1c8c2e217822ec.json  query-83658c65af7c30b0e2872335e26d0964acd879fe0d03c519ba20102688235d65.json  query-840fdf34401077f251f7e3599eaa365245bb7bf60d10dfe1c403a16f288089f5.json  query-97bf20c8d5d0237a83f8b454e6ff990282f9c6040d46d4eb1c95bde48ab40ffb.json  query-9849f5c83f8b8cd9c03697dc5f32c7888f7584f0100b65a37298f6370c7be822.json  query-9b21f435e131ba778f08f44c805ec1cc67fee8c96d6d429a394dd851978f848a.json  (+27 more)
tars-daemon/benches/: group.rs  task.rs
tars-daemon/migrations/: 20250402173958_init.sql  20250626204839_adding_color_to_group.sql  20250902221207_changing_finished.sql  20250902225140_group_priority.sql  20250902230015_add_colors_back_in.sql
tars-daemon/src/: daemon.rs  db.rs  lib.rs  main.rs  utils.rs
tars-daemon/tests/: groups.rs  tasks.rs  utils.rs
(+73 files in other folders)
