[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
lazy_static = "1.5.0"
thiserror = "2.0.12"
directories = "6.0.0"
nanoid = "0.4.0"
reqwest = { version = "0.12.19", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["chrono"] }
chrono = { version = "0.4.41", features = ["serde"] }
