[package]
name = "tars-cli"
version = "0.1.0"
edition = "2024"


[dependencies]
common = {path = "../common"}
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs" ,"sqlite", "macros", "migrate", "chrono"] }
clap = { version = "4.5.34", features = ["derive"] }
color-eyre = "0.6.3"
log = "0.4.27"
tokio = { version = "1.44.1", features = ["full"] }
rustyline = "15.0.0"
serde = "1.0.226"
serde_json = "1.0.145"
