[package]
name = "tars-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["macros"]}
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
color-eyre = "0.6.3"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-rustls-aws-lc-rs" ,"sqlite", "macros", "migrate", "chrono"] }

common = {path = "../common"}
criterion = { version = "0.6.0", features = ["async_tokio"] }
async-recursion = "1.1.1"
futures-util = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
serde_json = "1.0.141"
provider-types = {path = "../provider-types"}
toml = "0.9.8"
inventory = "0.3.21"
recurring = {path = "../providers/recurring"}

[[bench]]
name = "task"
harness = false

[[bench]]
name = "group"
harness = false


[lib]
crate-type = ["rlib", "dylib"]

