[package]
name = "recurring"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { version = "2.9.4", features = ["serde", "std"] }
chrono = "0.4.42"
serde = "1.0.228"
toml = "0.9.8"
inventory = "0.3.21"
provider-types = {path = "../../provider-types"}

common = {path="../../common"}
tracing = "0.1.41"
tokio = "1.48.0"
color-eyre = "0.6.5"
